[gd_scene load_steps=20 format=2]

[ext_resource path="res://scripts/GameControl.gd" type="Script" id=1]
[ext_resource path="res://assets/fundo sonic 2.png" type="Texture" id=2]
[ext_resource path="res://assets/fundo sonic 1.png" type="Texture" id=3]
[ext_resource path="res://assets/Green Hill Zone.ogg" type="AudioStream" id=4]
[ext_resource path="res://scripts/FakeBird.gd" type="Script" id=5]
[ext_resource path="res://assets/tails/frame_0_delay-0.01s.png" type="Texture" id=6]
[ext_resource path="res://assets/tails/frame_1_delay-0.01s.png" type="Texture" id=7]
[ext_resource path="res://assets/voo.wav" type="AudioStream" id=8]
[ext_resource path="res://scenes/Cano.tscn" type="PackedScene" id=9]
[ext_resource path="res://scripts/Gerador.gd" type="Script" id=10]
[ext_resource path="res://assets/font.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://assets/ponto.wav" type="AudioStream" id=12]
[ext_resource path="res://assets/morte.wav" type="AudioStream" id=13]

[sub_resource type="Animation" id=1]
resource_name = "BackgroundAnim"
length = 6.0
loop = true
step = 0.0
tracks/0/type = "value"
tracks/0/path = NodePath("Background/Fundo:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -1000, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Background/Fundo2:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1000, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "New Anim",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=3]
radius = 114.824

[sub_resource type="SegmentShape2D" id=4]
a = Vector2( 1000.21, 1.85503 )
b = Vector2( -0.280212, 1.85503 )

[sub_resource type="SegmentShape2D" id=5]
a = Vector2( 105.828, 216.869 )
b = Vector2( -894.324, 216.869 )

[sub_resource type="DynamicFont" id=6]
size = 160
font_data = ExtResource( 11 )

[node name="GameNode" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="AnimationPlayer" parent="."]
autoplay = "BackgroundAnim"
anims/BackgroundAnim = SubResource( 1 )
blend_times = [ "BackgroundAnim", "BackgroundAnim", 1.0 ]

[node name="Fundo" type="Sprite" parent="Background"]
position = Vector2( -174.593, 0 )
scale = Vector2( 3.70702, 3.6 )
texture = ExtResource( 2 )
centered = false

[node name="Fundo2" type="Sprite" parent="Background"]
position = Vector2( 825.407, 0 )
scale = Vector2( 3.69668, 3.6 )
texture = ExtResource( 3 )
centered = false

[node name="BackSound" type="AudioStreamPlayer" parent="Background"]
stream = ExtResource( 4 )

[node name="FakeBird" type="RigidBody2D" parent="."]
position = Vector2( 37.6173, -697.367 )
z_index = 1
mode = 2
gravity_scale = 18.0
script = ExtResource( 5 )

[node name="FakeBirdAnim" type="AnimatedSprite" parent="FakeBird"]
position = Vector2( 105.361, 799.344 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 2 )
animation = "New Anim"
frame = 3
speed_scale = 4.0
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="FakeBird"]
position = Vector2( 103.156, 796.791 )
shape = SubResource( 3 )

[node name="SomVoa" type="AudioStreamPlayer2D" parent="FakeBird"]
stream = ExtResource( 8 )

[node name="FlySound" type="Timer" parent="FakeBird"]
wait_time = 0.5

[node name="Limites" type="StaticBody2D" parent="."]
editor/display_folded = true

[node name="Teto" type="CollisionShape2D" parent="Limites"]
shape = SubResource( 4 )

[node name="Chao" type="CollisionShape2D" parent="Limites"]
position = Vector2( 893.624, 1481.03 )
shape = SubResource( 5 )

[node name="Canos" type="Node2D" parent="."]
editor/display_folded = true
z_index = 1

[node name="Cano" parent="Canos" instance=ExtResource( 9 )]
position = Vector2( 1210.78, 686.106 )
z_as_relative = false

[node name="Gerador" type="Position2D" parent="Canos"]
editor/display_folded = true
position = Vector2( 1202.7, 702.25 )
z_index = 1
script = ExtResource( 10 )

[node name="Timer" type="Timer" parent="Canos/Gerador"]
wait_time = 3.0
autostart = true

[node name="TimeToReplay" type="Timer" parent="."]
wait_time = 3.0

[node name="Placar" type="Node2D" parent="."]
z_index = 3

[node name="Control" type="Control" parent="Placar"]
margin_right = 1002.0
margin_bottom = 230.0

[node name="Pontuacao" type="Label" parent="Placar/Control"]
margin_left = 1.78955
margin_top = 44.0
margin_right = 1001.79
margin_bottom = 237.0
custom_fonts/font = SubResource( 6 )
text = "0"
align = 1
valign = 1

[node name="SomPonto" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 12 )

[node name="SomMorte" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 13 )

[node name="Morte_SoundRepeat" type="Timer" parent="."]
one_shot = true

[node name="Ponto_SoundRepeat" type="Timer" parent="."]
wait_time = 0.5

[connection signal="animation_finished" from="Background" to="." method="_on_Background_animation_finished"]
[connection signal="ready" from="Background" to="." method="_on_Background_ready"]
[connection signal="timeout" from="FakeBird/FlySound" to="FakeBird" method="_on_FlySound_timeout"]
[connection signal="timeout" from="Canos/Gerador/Timer" to="Canos/Gerador" method="_on_Timer_timeout"]
[connection signal="timeout" from="TimeToReplay" to="." method="_on_TimeToReplay_timeout"]
[connection signal="timeout" from="Morte_SoundRepeat" to="." method="_on_Morte_SoundRepeat_timeout"]
[connection signal="timeout" from="Morte_SoundRepeat" to="." method="_on_SoundTimer_timeout"]
[connection signal="timeout" from="Ponto_SoundRepeat" to="." method="_on_Ponto_SoundRepeat_timeout"]
